// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders with className 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--wrap foo"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with defaultProps 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fill large 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fill--large ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fill medium 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fill--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fill small 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fill--small ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fill true 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fill ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fit large 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fit--large ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fit medium 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fit--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fit small 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fit--small ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with fit true 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--fit ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with full large 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--full--large ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with full medium 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--full--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with full small 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--full--small ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with full true 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--full ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with gutters false 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with gutters large 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--large ax-grid--gutters-vertical--large ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with gutters medium 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with gutters small 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--small ax-grid--gutters-vertical--small ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with gutters tiny 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalAlign around 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--horizontal-around ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalAlign between 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--horizontal-between ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalAlign end 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--horizontal-end ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalAlign middle 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--horizontal-middle ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalAlign start 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--horizontal-start ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalGutters false 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-vertical--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalGutters large 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--large ax-grid--gutters-vertical--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalGutters medium 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalGutters small 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--small ax-grid--gutters-vertical--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with horizontalGutters tiny 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with responsive false 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with shrink large 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--shrink--large ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with shrink medium 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--shrink--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with shrink small 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--shrink--small ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with shrink true 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--shrink ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalAlign end 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--vertical-end ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalAlign middle 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--vertical-middle ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalAlign start 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--vertical-start ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalGutters false 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalGutters large 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--large ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalGutters medium 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--medium ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalGutters small 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--small ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;

exports[`Grid renders with verticalGutters tiny 1`] = `
<div
  className="ax-grid__container ax-space--x6"
>
  <div
    className="ax-grid ax-grid--responsive ax-grid--gutters-horizontal--medium ax-grid--gutters-vertical--tiny ax-grid--wrap"
  >
    <div />
  </div>
</div>
`;
